examples/test/testpolicy11592.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11592
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key10: value18
      key3: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value35
          key1: value6
          key36: value21
      podSelector:
        matchLabels:
          key41: value40
